--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="redes/instragram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instragram"></a><br>
-            <a href="redes/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="redes/instragram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instragram"></a>
+            <a href="redes/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
             <a href="redes/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
         </section>
     </main>
